--- a/index.html
+++ b/index.html
@@ -6,52 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PDF转图片示例</title>
   <style>
-    #fileInput::file-selector-button {
-      cursor: pointer;
-      border: 2px solid #555555;
-      color: #555555;
-      padding: 8px;
-      border-radius: 4px;
-      background-color: #ffffff;
-    }
-
-    #fileInput::file-selector-button:hover {
-      background-color: #e9e9e9;
-    }
-
-    #fileInput::-webkit-file-upload-button {
-      border: 2px solid #555555;
-      color: #555555;
-      padding: 8px;
-      border-radius: 4px;
-      background-color: #ffffff;
-    }
-
-    #fileInput::-webkit-file-upload-button:hover {
-      background-color: #e9e9e9;
-    }
-
     .page-image {
       margin: 10px 0;
       max-width: 100%;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     }
   </style>
+  <!-- 引入 vConsole -->
+  <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
 </head>
 
 <body>
   <h1>PDF转图片</h1>
-  <div style="margin-bottom: 20px;">
-    <input type="file" id="fileInput" accept=".pdf" name="avatar" title="选择 pdf 文件" style="width: 100%" />
-  </div>
   <div id="output"></div>
   <script src="/pdf.js"></script>
 </body>
 
 <script>
+  // 初始化 vConsole
+  var vConsole = new VConsole();
+  console.log('vConsole 已启用');
+
   pdfjsLib.GlobalWorkerOptions.workerSrc = '/pdf.worker.js';
 
   async function loadPDFFile(loadingTask) {
+    const start = Date.now()
     const outputDiv = document.getElementById('output');
     outputDiv.innerHTML = ''; // 清空之前的内容
 
@@ -96,25 +75,28 @@
 
       outputDiv.appendChild(pageDiv);
     }
+
+    console.log('耗时: ', Date.now() - start)
   }
 
-  const fileInput = document.getElementById('fileInput');
-  fileInput.addEventListener(
-    "change",
-    () => {
-      const file = fileInput.files[0];
-      console.log('选择的文件: ', file);
-      var fileReader = new FileReader();
-      fileReader.onload = function () {
-        var typedarray = new Uint8Array(this.result);
-        const loadingTask = pdfjsLib.getDocument(typedarray);
-        loadPDFFile(loadingTask);
-      };
+  // 直接加载指定URL的PDF
+  const pdfUrl = 'https://yyc-oss-bucket.oss-cn-beijing.aliyuncs.com/%E7%BD%91%E6%A0%BC%E5%B8%83%E5%B1%80%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97.pdf';
 
-      fileReader.readAsArrayBuffer(file);
-    },
-    false
-  );
+  // 添加加载提示
+  const outputDiv = document.getElementById('output');
+  outputDiv.innerHTML = '<p>正在加载PDF，请稍候...</p>';
+
+  // 使用fetch获取PDF文件
+  fetch(pdfUrl)
+    .then(response => response.arrayBuffer())
+    .then(arrayBuffer => {
+      const loadingTask = pdfjsLib.getDocument(new Uint8Array(arrayBuffer));
+      loadPDFFile(loadingTask);
+    })
+    .catch(error => {
+      console.error('加载PDF出错:', error);
+      outputDiv.innerHTML = '<p style="color: red;">PDF加载失败，请检查网络连接或PDF地址是否正确。</p>';
+    });
 
 </script>
 
