--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   }
 
   // 直接加载指定URL的PDF
-  const pdfUrl = 'https://yyc-oss-bucket.oss-cn-beijing.aliyuncs.com/%E7%BD%91%E6%A0%BC%E5%B8%83%E5%B1%80%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97.pdf';
+  const pdfUrl = 'https://yyc-oss-bucket.oss-cn-beijing.aliyuncs.com/1038733%E4%B8%AD%E5%A4%AE%E4%BB%93%E8%87%AA%E5%8A%A8%E5%8C%96%E9%9B%86%E6%88%90%E9%A1%B9%E7%9B%AE%E4%BA%A4%E9%92%A5%E5%8C%99%E5%90%88%E5%90%8C.pdf';
 
   // 添加加载提示
   const outputDiv = document.getElementById('output');
